--- a/01-really-static/index.html
+++ b/01-really-static/index.html
@@ -11,6 +11,7 @@
       <a href="index.html">Jamstack Fast Track</a>
       <nav>
         <a href="index.html" class="active">Home</a>
+        <a href="about.html">About</a>
       </nav>
     </header>
 
