feat: add about page

--- a/01-really-static/index.html
+++ b/01-really-static/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Really Static · Jamstack Fast Track</title>
-    <link rel="stylesheet" href="css/main.css"
+    <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
     <header>
       <a href="index.html">Jamstack Fast Track</a>
       <nav>
         <a href="index.html" class="active">Home</a>
+        <a href="about.html">About</a>
       </nav>
     </header>
 
